--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,8 +303,8 @@ header nav .container .buttons a:hover::after {
   align-self: flex-start;
 }
 .hero-section .row .text-container .hero_btns a:hover {
-  color: #f7941d;
-  background: #fff;
+  color: #fff;
+  background: #161616;
 }
 .hero-section .row .text-container .hero_btns button {
   height: 50px;
@@ -931,8 +931,9 @@ header nav .container .buttons a:hover::after {
   width: 100%;
   outline: none;
   font-size: 14px;
-  border-radius: 4px;
+  border-radius: 8px;
   border: solid 1px #ccc;
+  direction: rtl !important;
   transition: 0.3s ease-in-out;
 }
 .contact-section .col-12 .shaded-card .input-filed textarea {
@@ -941,7 +942,7 @@ header nav .container .buttons a:hover::after {
   font-size: 14px;
   padding: 16px;
   outline: none;
-  border-radius: 4px;
+  border-radius: 8px;
   border: solid 1px #ccc;
   transition: 0.3s ease-in-out;
 }
@@ -956,7 +957,7 @@ header nav .container .buttons a:hover::after {
   outline: none;
   background: #f7941d;
   color: #fff;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 .contact-section .image {
   aspect-ratio: 3/2;
