--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -303,8 +303,8 @@ header {
           text-decoration: none;
           align-self: flex-start;
           &:hover {
-            color: $main;
-            background: $white;
+            color: $white;
+            background: $black;
           }
         }
         button {
@@ -929,8 +929,9 @@ header {
         width: 100%;
         outline: none;
         font-size: 14px;
-        border-radius: 4px;
+        border-radius: 8px;
         border: solid 1px #ccc;
+        direction: rtl !important;
         transition: .3s ease-in-out;
       }
       textarea {
@@ -939,7 +940,7 @@ header {
         font-size: 14px;
         padding: 16px;
         outline: none;
-        border-radius: 4px;
+        border-radius: 8px;
         border: solid 1px #ccc;
         transition: .3s ease-in-out;
       }
@@ -957,7 +958,7 @@ header {
       outline: none;
       background: $main;
       color: #fff;
-      border-radius: 4px;
+      border-radius: 8px;
     }
   }
   .image {
