packages and header fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ header nav .container .navbar-brand img {
 header nav .container .nav-links {
   height: 80px;
   display: flex;
+  padding: 0;
   gap: 32px;
 }
 @media (max-width: 768px) {
@@ -100,19 +101,23 @@ header nav .container .nav-links {
     display: flex;
     flex-direction: column;
     background: white;
-    width: 100%;
+    width: 50%;
+    height: calc(100vh - 100px);
     top: 100px;
-    left: 0;
-    height: 0;
+    right: -50%;
     overflow: hidden;
-    justify-content: center;
+    justify-content: start;
     position: absolute;
-    z-index: 9999999;
-    gap: 24px;
+    z-index: 99999;
+    gap: 0;
     transition: 0.5s ease-in-out;
   }
   header nav .container .nav-links.active {
-    height: calc(100vh - 100px);
+    right: 0;
+  }
+  header nav .container .nav-links li {
+    padding: 0 16px;
+    justify-content: flex-start !important;
   }
 }
 header nav .container .nav-links li {
@@ -123,7 +128,7 @@ header nav .container .nav-links li {
 }
 @media (max-width: 768px) {
   header nav .container .nav-links li {
-    height: 70px;
+    height: 60px;
   }
 }
 header nav .container .nav-links li .nav-link {
@@ -217,6 +222,21 @@ header nav .container .buttons a:hover {
 }
 header nav .container .buttons a:hover::after {
   width: 100%;
+}
+
+.overlay {
+  z-index: 9;
+  position: fixed;
+  height: calc(100vh - 100px);
+  background: rgba(0, 0, 0, 0.5019607843);
+  width: 100%;
+  top: 100px;
+  left: 0;
+  opacity: 0;
+  transition: 0.5s ease-in-out;
+}
+.overlay.active {
+  opacity: 1;
 }
 
 .hero-section {
@@ -628,7 +648,7 @@ header nav .container .buttons a:hover::after {
 
 .packages {
   margin: 0 0 48px;
-  padding: 42px 0;
+  padding: 64px 0;
   overflow-x: hidden;
   position: relative;
 }
@@ -642,7 +662,7 @@ header nav .container .buttons a:hover::after {
   text-align: center;
   color: #000;
   font-weight: 500;
-  margin-bottom: 48px;
+  margin-bottom: 54px;
 }
 @media screen and (max-width: 768px) {
   .packages .txt {
@@ -661,24 +681,64 @@ header nav .container .buttons a:hover::after {
 }
 .packages .package-card {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: #fff;
+  border-radius: 16px;
+  height: 100%;
+  z-index: 1;
+  position: relative;
+}
+.packages .package-card .package_container {
+  gap: 16px;
+  height: 100%;
+  padding: 24px;
   display: flex;
+  position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 32px 24px;
-  height: 360px;
-  position: relative;
+}
+.packages .package-card.second {
+  transform: scale(1.2);
+  z-index: 2;
+}
+.packages .package-card.second .package_container {
+  transform: scale(0.8);
+  padding: 0;
+}
+@media screen and (max-width: 768px) {
+  .packages .package-card.second {
+    transform: scale(1);
+  }
+  .packages .package-card.second .package_container {
+    padding: 24px;
+    transform: scale(1);
+  }
 }
 .packages .package-card.p2::after {
-  content: "\f005";
-  font-family: "Font Awesome 6 Pro";
+  content: "";
+  background-image: url(../images/featured.svg);
+  width: 42px;
+  background-size: contain;
   border-radius: 50%;
+  height: 42px;
   position: absolute;
-  left: 16px;
+  left: 24px;
   top: 24px;
   font-size: 20px;
+  color: #f7941d;
+}
+.packages .package-card ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+}
+.packages .package-card ul li {
+  color: #161616;
+  font-size: 14px;
+}
+.packages .package-card ul li i {
   color: #f7941d;
 }
 .packages .package-card .title {
@@ -702,7 +762,6 @@ header nav .container .buttons a:hover::after {
 .packages .package-card p {
   font-size: 12px;
   line-height: 22px;
-  text-align: center;
   margin: 0;
 }
 .packages .package-card a {
@@ -716,7 +775,7 @@ header nav .container .buttons a:hover::after {
   transition: 0.3s ease-in-out;
   position: relative;
   font-weight: 500;
-  border-radius: 4px;
+  border-radius: 8px;
   padding: 8px 0;
   align-self: flex-start;
 }
