--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,14 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@300;400;500;600;700&display=swap');
+@font-face {
+  font-family: IBMRegular;
+  font-display: swap;
+  src: url(../webfonts/IBMPlexSansArabic-Regular.ttf);
+}
+@font-face {
+  font-family: IBMBold;
+  font-display: swap;
+  src: url(../webfonts/IBMPlexSansArabic-Bold.ttf);
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   line-height: 32px;
   scroll-behavior: smooth;
-  font-family: 'Noto Kufi Arabic', sans-serif;
+  font-family: 'IBMRegular', sans-serif;
   direction: rtl;
   -webkit-tap-highlight-color: transparent;
 }
+
 body {
   position: relative;
   overflow-x: hidden;
@@ -244,9 +254,11 @@ header {
   width: 100%;
   top: 100px;
   left: 0;
+  display: none;
   opacity: 0;
   transition: .5s ease-in-out;
   &.active {
+    display: block;
     opacity: 1;
   }
 }
@@ -282,11 +294,13 @@ header {
       h1 {
         font-weight: 600;
         line-height: 1.6;
+        font-family: "IBMBold", sans-serif;
         margin: 0 0 32px;
-        font-size: 48px;
+        font-size: 60px;
+        font-weight: bold;
         color: $black;
         @media (max-width: 576px) {
-          font-size: 32px;
+          font-size: 36px;
           margin: 16px 0;
           line-height: 1.4;
         }
