--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -968,6 +968,7 @@ header {
     margin-bottom: 48px;
     @media screen and (max-width: 768px) {
       margin-bottom: 12px;
+      padding: 0 12px;
     }
   }
   .hed {
