--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -970,6 +970,7 @@ header nav .container .buttons a:hover::after {
 @media screen and (max-width: 768px) {
   .contact-section .txt {
     margin-bottom: 12px;
+    padding: 0 12px;
   }
 }
 .contact-section .hed {
